# DAISI

./: .clang-format  .clang-tidy  README.md
speed-dreams/source-2.2.3/: .bat  .gitignore  BackendCoverage.json  CMakeLists.txt  CMakeSettings.json  FrontendCoverage.json  INSTALL.txt  README.txt  RppUtilsCoverage.bat  UnitUtilitiesCoverage.json
speed-dreams/source-2.2.3/SimulationData/: correctInput.txt  noStart.txt
speed-dreams/source-2.2.3/TestResults/a1a73eec-ce44-4b5b-a5ba-09a592e95a91/: sietz_LAPTOP-C4RCJPTR 2022-03-17 14_50_24.coverage
speed-dreams/source-2.2.3/cmake/: FindMYSQL.cmake  FindNSIS.cmake  FindPLIB.cmake  FindSDL2.cmake  FindSOLID.cmake  FindSQLITE3.cmake  checks.cmake  customthirdparty.cmake  fixbundle.cmake.in  install.cmake  internaldeps.cmake  macros.cmake  options.cmake  packagemaker-dmg.cmake  packagemaker-nsis.cmake  packagemaker.cmake  prerelease.cmake  prereleaseutils.cmake  robot.cmake  splitargn.cmake  thirdpartydeps.cmake
speed-dreams/source-2.2.3/data/: CMakeLists.txt  PREFERRED ACTIONS - OVER CORRECT - NOISE planner r50 a1000 s500 c1.500000 d0.908518 over correct noisy reinv initial att prefer.csv  database_connection_settings.txt  database_encryption_settings.txt  database_encyption_settings.txt  researcherSetting.txt
speed-dreams/source-2.2.3/data/ReplayData/: decisions.txt
speed-dreams/source-2.2.3/data/SimulationData/: noVariableNames.txt  nonExistingKey.txt
speed-dreams/source-2.2.3/data/Singletons/: Mediator
speed-dreams/source-2.2.3/data/blackbox/: Blackbox.md  CMakeLists.txt  run.bat
speed-dreams/source-2.2.3/data/cars/categories/: 67GP.xml  86MP1.xml  92MP1.xml  CMakeLists.txt  Fun-Racer.xml  LS-P2.xml  MP1.xml  MP10.xml  MP5.xml  MPA1.xml  MPA11.xml  MPA12.xml  Nascar.xml  References.xml  Stock.xml  SupercarsWithRearWing.xml
speed-dreams/source-2.2.3/data/cars/models/: CMakeLists.txt
speed-dreams/source-2.2.3/data/config/: CMakeLists.txt  graph.xml  logging.xml  osghudconfig.xml  screen.xml  sound.xml  webserver.xml
speed-dreams/source-2.2.3/data/config/raceman/: CMakeLists.txt  practice.xml  quickrace.xml  replay.xml  replay_visual.xml  singleevent-challenge.xml  singleevent-endurance.xml
speed-dreams/source-2.2.3/data/data/: CMakeLists.txt  credits.xml
speed-dreams/source-2.2.3/data/data/fonts/: CMakeLists.txt
speed-dreams/source-2.2.3/data/data/icons/: icon.xpm
speed-dreams/source-2.2.3/data/data/img/: CMakeLists.txt
speed-dreams/source-2.2.3/data/data/indicators/: CMakeLists.txt  Config.xml  config.xml
speed-dreams/source-2.2.3/data/data/intervention/: CMakeLists.txt  config.xml  intervention.xml
speed-dreams/source-2.2.3/data/data/menu/: BeginExperiment.xml  BeginExperimentMenu.xml  ConfirmationMenu.xml  DataCompressionMenu.xml  DataSelectionMenu.xml  DatabaseSettingsMenu.xml  DeveloperMenu.xml  EndExperimentMenu.xml  ResearcherMenu.xml  SaveMenu.xml  ThresholdConfigMenu.xml  advancedgraphconfigmenu.xml  carsetupmenu.xml  carsetupmenuitems.xml  confirmationmenu.xml  conformationmenu.xml  controlconfigmenu.xml  creditsmenu.xml  csnetworkclientmenu.xml  csnetworkservermenu.xml  csraceselectmenu.xml  displayconfigmenu.xml  driverselectmenu.xml  endexperimentscreen.xml  exitmenu.xml  fileselectmenu.xml  forcefeedbackconfigmenu.xml  garagemenu.xml  helpmenu.xml  interventionmenu.xml  joy2butconfigmenu.xml  joystickconfigmenu.xml  loadingscreen.xml  mainmenu.xml  monitorconfigmenu.xml  mouseconfigmenu.xml  optimizationscreen.xml  optionsmenu.xml  playerconfigmenu.xml  racemanmenu.xml  (+7 more)
speed-dreams/source-2.2.3/data/data/objects/: Ambulance.ac  background-sky.ac  land.ac  normal_pit_indicator.ac  pit_indicator.ac  wheel0.ac  wheel1.ac  wheel2.ac  wheel3.ac
speed-dreams/source-2.2.3/data/data/shaders/: CMakeLists.txt  car.frag  car.vert  water.frag  water.vert
speed-dreams/source-2.2.3/data/data/sky/: CMakeLists.txt  stars.txt
speed-dreams/source-2.2.3/data/data/textures/: scattered3.rgba  scattered4.rgba
speed-dreams/source-2.2.3/data/data/tracks/: curved-highway.xml  curved-road.xml  elevation-highway.xml  road.xml  (+4 more)
speed-dreams/source-2.2.3/data/databaseTestData/: gamestate-buffer.csv  meta-data-intervention-1.txt  meta-data-intervention-2.txt  meta-data-intervention-4.txt  meta-data-intervention-invalid.txt  userinput-buffer.csv
speed-dreams/source-2.2.3/data/drivers/: CMakeLists.txt
speed-dreams/source-2.2.3/data/replayBlackbox/: CMakeLists.txt  SDAReplay
speed-dreams/source-2.2.3/data/tracks/: CMakeLists.txt
speed-dreams/source-2.2.3/enc_temp_folder/6da07032a5d3be1886be387fd9d48d9/: ResearcherMenu.cpp
speed-dreams/source-2.2.3/packaging/: CMakeLists.txt
speed-dreams/source-2.2.3/packaging/appdata/: speed-dreams-2.appdata.xml
speed-dreams/source-2.2.3/packaging/windows/: readme_for_user.txt  speed-dreams-base.nsi  speed-dreams-hq-cars-and-tracks.nsi  speed-dreams-more-hq-cars-and-tracks.nsi  speed-dreams-unmaintained.nsi  speed-dreams-wip-cars-and-tracks.nsi  speed-dreams.nsh  speed-dreams.nsh.in
speed-dreams/source-2.2.3/src/: CMakeLists.txt
speed-dreams/source-2.2.3/src/drivers/: CMakeLists.txt
speed-dreams/source-2.2.3/src/interfaces/: car.h  graphic.h  playerpref.h  raceman.h  robot.h  sound.h  track.h
speed-dreams/source-2.2.3/src/libs/: CMakeLists.txt
speed-dreams/source-2.2.3/src/main/: CMakeLists.txt  main.cpp  main.rc
speed-dreams/source-2.2.3/src/modules/: CMakeLists.txt
speed-dreams/source-2.2.3/src/simulatedDrivingAssistance/: CHANGES.txt  CMakeLists.txt
speed-dreams/source-2.2.3/temp/: race_data_buffer.txt
speed-dreams/source-2.2.3/test_data/: test_thresholds.xml  test_thresholds_defaults.xml
speed-dreams/source-2.2.3/test_data/testSimulationData/: test_file.txt  test_noDecisions.txt  test_noGameState.txt  test_noUserInput.txt  test_wrongLightsValue.txt
speed-dreams/source-2.2.3/test_data/user_recordings/: userRecording20220404-160351.txt  userRecording20220406-145704.txt  userRecording20220406-151344.txt  userRecording20220406-153300.txt  userRecording20220406-165257.txt  userRecording20220406-205849.txt  userRecording20220407-100812.txt
(+4758 files in other folders)
