INCLUDE(../cmake/macros.cmake)

ENABLE_TESTING()

IF(NOT BACKEND_ONLY_OPTION)
ADD_SUBDIRECTORY(interfaces)

ADD_SUBDIRECTORY(drivers)

ADD_SUBDIRECTORY(modules)

ADD_SUBDIRECTORY(main)

ADD_SUBDIRECTORY(tools)
ENDIF(NOT BACKEND_ONLY_OPTION)

ADD_SUBDIRECTORY(libs)

ADD_SUBDIRECTORY(simulatedDrivingAssistance)

