INCLUDE(../../cmake/macros.cmake)

ADD_SUBDIRECTORY(graphic)
ADD_SUBDIRECTORY(sound)

ADD_SUBDIRECTORY(simu)

ADD_SUBDIRECTORY(track)

ADD_SUBDIRECTORY(userinterface)
ADD_SUBDIRECTORY(racing)

ADD_SUBDIRECTORY(telemetry)

IF(OPTION_CLIENT_SERVER)
  ADD_SUBDIRECTORY(csnetworking)
ELSE(OPTION_CLIENT_SERVER)
  ADD_SUBDIRECTORY(networking)
ENDIF(OPTION_CLIENT_SERVER)

