INCLUDE(../../cmake/macros.cmake)

ENABLE_TESTING()

ADD_SUBDIRECTORY(backend)
ADD_SUBDIRECTORY(backendUnitTests)
ADD_SUBDIRECTORY(unitTestUtilities)
ADD_SUBDIRECTORY(unitTestUtilitiesTests)
ADD_SUBDIRECTORY(frontend)
ADD_SUBDIRECTORY(frontendUnitTests)

IF(OPTION_INTEGRATION_TESTS)
	ADD_SUBDIRECTORY(integrationTests)
ENDIF(OPTION_INTEGRATION_TESTS)