
INCLUDE(../../../cmake/macros.cmake)

FILE(GLOB _SOURCES *.cpp)
FILE(GLOB _INLINES *.inl)
FILE(GLOB _HEADERS *.h)

ADD_INTERFACE_INCLUDEDIR()
ADD_SDLIB_INCLUDEDIR(tgf math portability frontend)

ADD_SQLITE3_INCLUDEDIR()

SD_ADD_LIBRARY(backend STATIC ${_SOURCES} ${_HEADERS} ${_INLINES})
SET_TARGET_PROPERTIES(backend PROPERTIES LINKER_LANGUAGE CXX)

TARGET_LINK_LIBRARIES(backend frontend)

ADD_SDLIB_LIBRARY(backend tgf portability)

ADD_MSGPACK_PACKAGE(backend)

ADD_IPCLIB_PACKAGE(backend)

ADD_SQLITE3_LIBRARY(backend)

SD_INSTALL_FILES(LIB simulatedDrivingAssistance/backend TARGETS backend)